# apzkr-pzpi-21-4-sorokin-vadym

./: README.md  apzkr-pzpi-21-4-sorokin-vadym.txt
apzkr-pzpi-21-4-sorokin-vadym/Task1-Server/: compose.yml
apzkr-pzpi-21-4-sorokin-vadym/Task1-Server/ai-server/: Dockerfile  main.py  pyproject.toml
apzkr-pzpi-21-4-sorokin-vadym/Task1-Server/ai-server/docs/: sequence.puml  state.puml
apzkr-pzpi-21-4-sorokin-vadym/Task1-Server/ai-server/src/: __init__.py  application.py  domain.py  entrypoint.py  infostructure.py
apzkr-pzpi-21-4-sorokin-vadym/Task1-Server/main-server/: Cargo.toml  Dockerfile  Rocket.toml
apzkr-pzpi-21-4-sorokin-vadym/Task1-Server/main-server/src/: main.rs
apzkr-pzpi-21-4-sorokin-vadym/Task1-Server/main-server/src/main_server/: lib.rs
apzkr-pzpi-21-4-sorokin-vadym/Task1-Server/main-server/src/main_server/application/: admin.rs  authentication.rs  mod.rs  personal.rs  user.rs
apzkr-pzpi-21-4-sorokin-vadym/Task1-Server/main-server/src/main_server/domain/: dto.rs
apzkr-pzpi-21-4-sorokin-vadym/Task1-Server/main-server/src/main_server/entrypoint/: admin.rs  authentication.rs  mod.rs  personal.rs  user.rs
apzkr-pzpi-21-4-sorokin-vadym/Task1-Server/main-server/src/main_server/infrastructure/postgresql/: admin_repo.rs  authentication.rs  mod.rs  personal_repo.rs  user_repo.rs
apzkr-pzpi-21-4-sorokin-vadym/Task2-IoT/: Cargo.toml
apzkr-pzpi-21-4-sorokin-vadym/Task2-IoT/src/: lib.rs  (+5 more)
apzkr-pzpi-21-4-sorokin-vadym/Task3-WebClient/: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  README.md  flutter_jank_metrics_01.json  pubspec.yaml
(+68 files in other folders)
