[package]
name = "main-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "main_server"
path = "src/main_server/lib.rs"

[dependencies]
hmac = "0.12.1"
jwt = "0.16.0"
pwhash = "1.0.0"
reqwest = "0.12.4"
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6.0"
rocket_db_pools = {version = "0.1.0", features = ["sqlx_postgres"]}
sha2 = "0.10.8"
sqlx = {version = "0.7.4", features = ["time"]}

